# playtranslate

./: .gitignore  .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/playtranslate/: BergamotBatchTest.kt  SudachiProdValidationTest.kt
app/src/androidTest/java/com/playtranslate/ocr/: OcrGoldenSetTest.kt  OcrMetrics.kt
app/src/androidTest/java/com/playtranslate/security/: SecretCipherTest.kt
app/src/androidTest/java/com/playtranslate/translation/: ChineseScriptConverterInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: langpack_catalog.json
app/src/main/java/com/playtranslate/: AnkiCsum.kt  AnkiManager.kt  CaptureService.kt  Classification.kt  DisplaySize.kt  FuriganaMode.kt  InAppOnlyMode.kt  LiveMode.kt  MainActivity.kt  MlKitModelPreloader.kt  OcrManager.kt  OcrPreprocessingRecipe.kt  OcrSeedWriter.kt  OneShotManager.kt  OneShotProcessor.kt  OverlayPermissionIntent.kt  OverlayToolkit.kt  OverlayUiController.kt  PinholeCalibration.kt  PinholeOverlayMode.kt  PlayTranslateAccessibilityService.kt  PlayTranslateApplication.kt  PlayTranslateTileService.kt  Prefs.kt  RegionOverlayController.kt  ScreenshotManager.kt  ThemeUtils.kt  TranslationCache.kt  TranslationOverlayMode.kt  UpdateChecker.kt
app/src/main/java/com/playtranslate/capture/: AccessibilityCaptureBackend.kt  CaptureBackend.kt  CaptureBackendResolver.kt  CaptureCache.kt  CaptureLifecycle.kt  CaptureSource.kt  MediaProjectionCaptureBackend.kt  MediaProjectionCaptureSource.kt  MediaProjectionConsentActivity.kt  MediaProjectionController.kt
app/src/main/java/com/playtranslate/diagnostics/: LogExporter.kt
app/src/main/java/com/playtranslate/dictionary/: Deinflector.kt  DictionaryManager.kt  JapaneseTokenizer.kt  PrefixSearch.kt  SudachiJapaneseTokenizer.kt
app/src/main/java/com/playtranslate/language/: ActivePairPriming.kt  ChineseDictionaryManager.kt  ChineseEngine.kt  ChineseScriptVariant.kt  DefinitionGlossTranslators.kt  DefinitionResolver.kt  FstTargetGlossDatabase.kt  JapaneseEngine.kt  KoreanEngine.kt  Language.kt  LanguagePackCatalog.kt  LanguagePackDownloader.kt  LanguagePackStore.kt  LatinEngine.kt  PackIntegrity.kt  PackUpgradeOrchestrator.kt  PinyinDisambiguation.kt  PinyinFormatter.kt  SourceLanguageEngine.kt  TargetGlossDatabase.kt  TatoebaClient.kt  TranslationManagerProvider.kt  WiktionaryDictionaryManager.kt
app/src/main/res/drawable/: bg_anki_meta_chip.xml  bg_hub_chip.xml  divider_vertical_1dp_ptdivider.xml  ic_arrow_forward.xml  ic_capture.xml  ic_cloud.xml  ic_cloud_off.xml  ic_dictionary.xml  ic_discord.xml  ic_export_notes.xml  ic_game_controller.xml  ic_gesture_select.xml  ic_lens_chevron.xml  ic_lens_speak.xml  ic_mode_off_on.xml  ic_offline_star_filled.xml  ic_offline_star_half.xml  ic_offline_star_outline.xml  ic_palette.xml  ic_star_filled.xml  ic_star_half.xml  ic_star_outline.xml  ic_status_cloud_down.xml  ic_status_downloaded.xml  ic_text_to_speech.xml  ic_touch_app.xml  ic_touch_long.xml  ic_touch_triple.xml  ic_translate.xml  ic_volunteer_activism.xml
app/src/main/res/layout/: activity_anki_settings.xml  activity_appearance_settings.xml  activity_capture_overlay_settings.xml  activity_deepl_settings.xml  activity_dictionary_lookup.xml  activity_hotkeys_settings.xml  activity_language_setup.xml  activity_llm_backend_settings.xml  activity_llm_model_picker.xml  activity_main.xml  activity_translation_result.xml  activity_translation_services_settings.xml  activity_tts_voice.xml  bottom_sheet_anki_review.xml  bottom_sheet_word_detail.xml  dialog_anki_card_type_picker.xml  dialog_anki_content_source_picker.xml  dialog_anki_deck_picker.xml  dialog_anki_field_mapping.xml  dialog_hotkey_setup.xml  dialog_settings.xml  fragment_translation_result.xml  item_region_row.xml  item_settings_link.xml  item_word_lookup.xml  language_list_row.xml  page_language_list.xml  settings_offline_stat_cell_mono.xml  settings_offline_stat_cell_stars.xml  settings_row_backend.xml  settings_row_backend_offline.xml  settings_row_divider.xml  settings_row_hotkey.xml  settings_row_hub.xml  settings_row_link.xml  settings_row_power.xml  settings_row_switch.xml  settings_row_value.xml  settings_row_value_multiline.xml  sheet_add_custom_region.xml  (+3 more)
app/src/main/res/values/: attrs.xml  bools.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-v30/: bools.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: file_provider_paths.xml  network_security_config.xml
app/src/test/java/com/playtranslate/: AnkiCsumTest.kt  ClassificationTest.kt  LineAssemblyTest.kt  OcrGroupingTest.kt  PrefsAnkiAudioMigrationTest.kt  PrefsSecretMigrationTest.kt  RecognizedTextNormalizerTest.kt
app/src/test/resources/: robolectric.properties
bergamot/: build.gradle.kts  consumer-rules.pro
bergamot/src/main/cpp/: CMakeLists.txt  bergamot_jni.cpp
gradle/: libs.versions.toml
l10n-review/: ar.md  de.md  es.md  fr.md  ja.md  ko.md  pt-rBR.md  ru.md  th.md  tr.md  vi.md  zh-rCN.md
mnn/: build.gradle.kts  consumer-rules.pro
mnn/src/main/cpp/: CMakeLists.txt  logging.h  mnn_chat.cpp  mnn_infer.cpp
scripts/: build_hybrid_target_pack.py  build_jmdict.py  build_latin_dict.py  build_paddle_spike_report.py  build_panlex_target_pack.py  build_target_pack.py  filter_unmappable.py  gen_bergamot_catalog.py  iso_codes.py  requirements.txt
scripts/ocr-model-conversion/: .gitignore  README.md  convert_all.py  convert_langs.py  convert_meiki.py  requirements.txt
(+230 files in other folders)
